--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     
     <div class="container zone red"> <img class="cover" src="files_phto5.jpeg"> <span>I'm Jimmy Taravia, A tech-lover and a writing enthusiast who notice things and point themm out to people. </span> </div>
     <div class="zone blue grid-wrapper"> 
-        <div class="box zone"><img src="C:\Users\Lenovo\Desktop\GIT_structure2\files_phto1.png"> abc</div>
-        <div class="box zone"><img src="C:\Users\Lenovo\Desktop\GIT_structure2\files_phto2.png">abc </div>
-        <div class="box zone"><img src="C:\Users\Lenovo\Desktop\GIT_structure2\files_phto3.png">abc </div>
-        <div class="box zone"><img src="C:\Users\Lenovo\Desktop\GIT_structure2\files_phto4.png">abc</div>
-        <div class="box zone"><img src="C:\Users\Lenovo\Desktop\GIT_structure2\files_phto1.png">abc </div>
-        <div class="box zone"><img src="C:\Users\Lenovo\Desktop\GIT_structure2\files_phto2.png">abc </div>
-        <div class="box zone"><img src="C:\Users\Lenovo\Desktop\GIT_structure2\files_phto3.png">abc </div>
-        <div class="box zone"><img src="C:\Users\Lenovo\Desktop\GIT_structure2\files_phto4.png">abc </div>
+        <div class="box zone"><img src="files_phto1.png"> abc</div>
+        <div class="box zone"><img src="files_phto2.png">abc </div>
+        <div class="box zone"><img src="files_phto3.png">abc </div>
+        <div class="box zone"><img src="files_phto4.png">abc</div>
+        <div class="box zone"><img src="files_phto1.png">abc </div>
+        <div class="box zone"><img src="files_phto2.png">abc </div>
+        <div class="box zone"><img src="files_phto3.png">abc </div>
+        <div class="box zone"><img src="files_phto4.png">abc </div>
 
     </div>
     <div class="zone yellow">Footer</div>
